Se cambia la url al ambiente de desarrollo

--- a/AutoWebSpa/App.config
+++ b/AutoWebSpa/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <!--<add key="UrlAmbiente" value="http://v12webfondos:7044/TEST/VFHomeNG/#HWiDoiVx8ZLS68KCmf2IH2Gd4RyO4a2gW9MTB-p7sp0uXYhIK5QXZZPPnh9nSt_YZV0Jvx0ulzTQWPp0GYZL3A" /> -->
-    <add key="UrlAmbiente" value="http://192.168.22.70:58917" />
+    <add key="UrlAmbiente" value="http://v12webfondos:7005/Desarrollo/VFWebSPA/#/mainpage" />
     <add key="DefaultImagePath" value="\Reportes\Imagenes\" />
     <add key="DefaultReportPath" value="\Reportes\" />
     <add key="DownloadPath" value="C:\Users\Usuario\Downloads\" />
